[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/level_up_menu/level_up.gd" type="Script" id=1]

[node name="LevelUp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MC" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -84.0
margin_right = 88.0
margin_bottom = 84.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VB" type="VBoxContainer" parent="MC"]
margin_left = 50.0
margin_top = 50.0
margin_right = 126.0
margin_bottom = 118.0

[node name="O1" type="Button" parent="MC/VB"]
margin_right = 76.0
margin_bottom = 20.0
text = "OPTION 1"

[node name="O2" type="Button" parent="MC/VB"]
margin_top = 24.0
margin_right = 76.0
margin_bottom = 44.0
text = "OPTION 2"

[node name="O3" type="Button" parent="MC/VB"]
margin_top = 48.0
margin_right = 76.0
margin_bottom = 68.0
text = "OPTION 3"

[connection signal="pressed" from="MC/VB/O1" to="." method="_on_O1_pressed"]
[connection signal="pressed" from="MC/VB/O2" to="." method="_on_O2_pressed"]
[connection signal="pressed" from="MC/VB/O3" to="." method="_on_O3_pressed"]
